--- a/src/pages/components/Gallery/Gallery1.css
+++ b/src/pages/components/Gallery/Gallery1.css
@@ -11,6 +11,7 @@
   
   .image-gallery > li {
     flex-basis: 350px;
+    margin-bottom: 20px;
   }
   
   .image-gallery li img {
@@ -55,7 +56,7 @@
   }
 
 
-  form{
+  .gallery_form{
     background-color:gray;
     border-radius: 10px;
     height: 20vh;
@@ -66,7 +67,7 @@
     justify-content: center;
   }
 
-  input{
+  .gallery_input{
     width: 50%;
     margin: 10px auto;
     padding: 5px 10px;
