--- a/src/pages/Home/Banner/Banner/AppBanner.css
+++ b/src/pages/Home/Banner/Banner/AppBanner.css
@@ -1,6 +1,6 @@
 .land-holder{
     width: 100%;
-    height: 90vh;
+    height: 85vh;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -13,13 +13,14 @@
 }
 
 .color-holder{
-    /* background: #444; */
+    background: rgb(255, 255, 255);
     position: absolute;
     width: 350px;
-    height: 80vh;
+    height: 75vh;
     border-radius: 5px;
     margin-top: 50px;
     margin-left: 120px;
+    /* border: 5px solid; */
 }
 
 .slanted-line {
@@ -171,7 +172,6 @@
     animation-name: fadeIn;
  }
 /* styling of slider ends here */
-
 
 
 @media  screen and (max-width:440px){
