--- a/src/pages/Home/Banner/Banner1/Banner.css
+++ b/src/pages/Home/Banner/Banner1/Banner.css
@@ -14,6 +14,8 @@
   }
   
   .swiper {
+    margin-top: 20px;
+    border-radius: 10px;
     width: 100%;
     height: 80vh;
   }
@@ -54,6 +56,7 @@
 
 @media screen and (max-width:450px){
     .swiper {
+        border-radius: 0;
         width: 100%;
         height: 60vh;
     }
